20080503: Added docs/db.html "Database explanation and alternative data loading methods", i.e. direct access to the Berkeley DB files.

20080505: Bar length buttons and combobox were not synchronized. Applied patch #1957299. Thanks to rgf.

20080505: Add Preferences options to show buttons for 60-minute and 5-minute bar length. Applied patch #1908413. Thanks to rgf.