@@ -3,3 +3,5 @@
 20080505: Bar length buttons and combobox were not synchronized. Applied patch #1957299. Thanks to rgf.
 
 20080505: Add Preferences options to show buttons for 60-minute and 5-minute bar length. Applied patch #1908413. Thanks to rgf.
+
+20080529: Chart object "FiboLine" now shows all line values as they are being added. Applied patch #1965845. Thanks to blshkv.
